WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312530
[cleanup] Have layoutAndPlaceFlexItems return LineState instead of populating the vector directly
https://bugs.webkit.org/show_bug.cgi?id=312530
Summary
[cleanup] Have layoutAndPlaceFlexItems return LineState instead of populating...
alan
Reported
2026-04-16 18:02:46 PDT
ssia
Attachments
Patch
(4.89 KB, patch)
2026-04-16 18:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(8.91 KB, patch)
2026-04-16 18:15 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(14.85 KB, patch)
2026-04-16 19:37 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.38 KB, patch)
2026-04-16 19:55 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.63 KB, patch)
2026-04-16 20:19 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(16.80 KB, patch)
2026-04-17 05:03 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-16 18:03:21 PDT
Created
attachment 479116
[details]
Patch
alan
Comment 2
2026-04-16 18:15:33 PDT
Created
attachment 479117
[details]
Patch
alan
Comment 3
2026-04-16 19:37:38 PDT
Created
attachment 479118
[details]
Patch
alan
Comment 4
2026-04-16 19:55:25 PDT
Created
attachment 479121
[details]
Patch
alan
Comment 5
2026-04-16 20:19:54 PDT
Created
attachment 479122
[details]
Patch
alan
Comment 6
2026-04-17 05:03:08 PDT
Created
attachment 479128
[details]
[fast-cq]Patch
EWS
Comment 7
2026-04-17 06:56:50 PDT
Committed
311448@main
(981ec0c4d745): <
https://commits.webkit.org/311448@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479128
[details]
.
Radar WebKit Bug Importer
Comment 8
2026-04-17 06:57:12 PDT
<
rdar://problem/175006606
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug